--- a/report/berhoglu_okan_project_report.tex
+++ b/report/berhoglu_okan_project_report.tex
@@ -19,7 +19,7 @@
 
 % Title Page Information
 \title{\textbf{MMI712 Project Phase 1 Report}}
-\author{Okan Berhoglu}
+\author{Okan Berhoglu 2739050}
 \date{\today}
 
 \begin{document}
