--- a/report/berhoglu_okan_project_report.tex
+++ b/report/berhoglu_okan_project_report.tex
@@ -96,6 +96,22 @@ After running the application with the command given in the section \ref{sec:usa
     \label{fig:q2}
 \end{figure}
 
+The application is executed with another test image which is given in the figure \ref{fig:test_two} as well. The results are given in the figure \ref{fig:two_q1}.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=350pt]{test_image_two.png}
+    \caption{Example input image.}
+    \label{fig:test_two}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=350pt]{two_q1.png}
+    \caption{Example usage with other test image.}
+    \label{fig:two_q1}
+\end{figure}
+
 \section{Conclusion}
 In this project, the Moondream vision language model was successfully containerized using Docker. A Dockerfile was created to automate the installation of dependencies and the model itself, ensuring a consistent and reproducible environment. A Python script was developed to interface with the model, allowing users to perform Visual Question Answering tasks via a command-line interface. This implementation simplifies the deployment process and demonstrates the feasibility of running efficient VLMs on local hardware.
 
