Application screenshots are added.

--- a/docs/berhoglu_okan_project_report.tex
+++ b/docs/berhoglu_okan_project_report.tex
@@ -88,7 +88,7 @@ An example usage of the application and the results are given in this section. F
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=350pt]{test_image.png}
+    \includegraphics[width=350pt]{main_ss.png}
     \caption{Example input image.}
     \label{fig:test}
 \end{figure}
@@ -96,31 +96,46 @@ After running the application with the command given in the section \ref{sec:usa
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=400pt]{q1.png}
-    \caption{Example usage.}
-    \label{fig:q1}
+    \includegraphics[width=350pt]{main_ss_one.png}
+    \caption{Example input image.}
+    \label{fig:test_one}
 \end{figure}
+
 \begin{figure}[H]
     \centering
-    \includegraphics[width=350pt]{q2.png}
-    \caption{Example usage with questions.}
-    \label{fig:q2}
+    \includegraphics[width=350pt]{chat_ss_one.png}
+    \caption{Example usage with other test image.}
+    \label{fig:one_q1}
 \end{figure}
 
 The application is executed with another test image which is given in the figure \ref{fig:test_two} as well. The results are given in the figure \ref{fig:two_q1}.
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=350pt]{test_image_two.png}
+    \includegraphics[width=350pt]{main_ss_two.png}
     \caption{Example input image.}
     \label{fig:test_two}
 \end{figure}
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=350pt]{two_q1.png}
+    \includegraphics[width=350pt]{chat_ss_two.png}
     \caption{Example usage with other test image.}
     \label{fig:two_q1}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=350pt]{main_ss_three.png}
+    \caption{Example input image.}
+    \label{fig:test_three}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=350pt]{chat_ss_three.png}
+    \caption{Example usage with other test image.}
+    \label{fig:three_q1}
 \end{figure}
 
 \section{Conclusion}
